# zap-movie-maker

./: .gitignore  README.md  config.yml  constraints.txt  create_movie.bat  create_movie.sh  gen_doc.bat  metan.py  requirements.txt  script.csv  setup.cfg  zundamon.py
docs/: conf.py  index.rst  modules.rst
src/: clip.py  interface.py  main.py  tachie.py  util.py  voiceroid2_options.py  voiceroid2_requests.py  voicevox_options.py
zap_movie_maker/: __init__.py  clip.py  csv_wrapper.py  exo.py  main.py  tachie.py  telop.py  util.py  voiceroid2_options.py  voiceroid2_requests.py  voicevox_options.py  voicevox_requests.py
