
[metadata]
name = zap-movie-maker
version = attr: zap_movie_maker.__version__
license_file = LICENSE
author = masachaco
platforms=Windows
url = https://github.com/masachaco/zap-movie-maker
description = Python/テキストベースで動画を作成するツール

[options]
packages = zap_movie_maker
python_requires = >= 3.4
